add subCategory page

--- a/yummy-place/index.html
+++ b/yummy-place/index.html
@@ -7,14 +7,16 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>념념굿</title>
-    <script src="js/includeHTML.js" defer></script>
+    <script src="./js/includeHTML.js" defer></script>
 </head>
 
 <body>
     
 <header data-include="./component/header.html"></header>
  
-<h1>TEST</h1>
+<h1>념념굿 페이지입니다</h1>
+
+<input type="button" value="고고" onClick="location.href='category.html'">
  
 <footer data-include="./component/footer.html"></footer>
 </body>
